feat: Update project name and metadata
Updates the project's package name, HTML title, and metadata to reflect the new application name "CamWatch Pro - Lâm Viên". This improves branding and clarity for the security camera management system.

--- a/index.html
+++ b/index.html
@@ -111,5 +111,7 @@
 </head>
 <body class="bg-slate-50 text-slate-900 selection:bg-indigo-100 selection:text-indigo-700">
   <div id="root"></div>
+  <!-- QUAN TRỌNG: Script này dùng để khởi chạy ứng dụng -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
