--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="theme-color" content="#4f46e5" />
-  <meta name="description" content="Hệ thống quản lý Camera an ninh thông minh Phường Lâm Viên - Giải pháp giám sát đô thị hiện đại." />
+  <meta name="description" content="Hệ thống quản lý Camera an ninh thông minh Phường Lâm Viên - Đà Lạt." />
   
   <!-- Open Graph / Social Media -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="CamWatch Pro - Lâm Viên" />
+  <meta property="og:title" content="Camera giám sát - Lâm Viên- Đà Lạt" />
   <meta property="og:description" content="Quản lý hệ thống camera an ninh thời gian thực." />
   <meta property="og:image" content="https://images.unsplash.com/photo-1557597774-9d2739f85a94?auto=format&fit=crop&q=80&w=1000" />
 
-  <title>CamWatch Pro - Phường Lâm Viên</title>
+  <title>Camera giám sát - Phường Lâm Viên - Đà Lạt</title>
   
   <script src="https://cdn.tailwindcss.com"></script>
   
